# cliplayer

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  .taplo.toml  AGENTS.md  Cargo.toml  README.md  SPECIFICATION.md  TODO.md  angular.json  eslint.config.js  eslint.config.ts  index.html  justfile  music.schema.json  package-lock.json  package.json  pnpm-lock.yaml  rdd.md  rust-toolchain.toml  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
cmn_rs/: Cargo.toml
cmn_rs/src/: color.rs  lib.rs  min_json.rs  tracing.rs  yt.rs
cmn_rs/src/tracing/: cfg.rs  cli.rs  level.rs
cmn_rs/src/yt/: channel_id.rs
metadata/: Cargo.toml
metadata/artist/: Cargo.toml  README.md  format.md
metadata/artist/data/: livers.json
metadata/artist/src/: cfg.rs  generate.rs  lib.rs  model.rs  output.rs
metadata/artist/src/model/: liver.rs  official_channel.rs
metadata/artist/src/output/: artist_search_index.rs  channels.rs  livers.rs  minified_json.rs  official_channels.rs  snippet.rs
metadata/src/: cli.rs  cli_exec_handler.rs  lib.rs  main.rs
metadata/tag/: Cargo.toml  README.md  format.md
metadata/tag/data/: tags.json
metadata/tag/src/: cfg.rs  generate.rs  lib.rs  model.rs  output.rs
metadata/tag/src/model/: video.rs  video_tag.rs
metadata/tag/src/output/: minified_json.rs  snippet.rs  video_tags_min.rs
metadata/tests/: cli_e2e.rs  cli_exec_handler.rs
music/: Cargo.toml  README.md  overview.md
music/data/: README.md  format.md  tags.json
music/data/input/: 2026-03-02_08-15-20.json  2026-03-03_15-25-08.json  2026-05-02_16-52-49.json  2026-05-06_15-17-07.json  a.json  x_note.txt
music/data/music/2021/: 02.json
music/data/music/2023/: 12.json
music/data/music/2024/: 01.json  05.json  06.json  07.json  09.json
music/data/music/2025/: 01.json  02.json  04.json  05.json  06.json  08.json
music/data/music/2026/: 01.json  02.json  03.json  04.json
music/src/: apply.rs  cfg.rs  cli.rs  cli_exec_handler.rs  dev.rs  fetcher.rs  hash_inputs.rs  lib.rs  main.rs  min_output.rs  model.rs  music_file.rs  operations.rs  report.rs  search_source.rs  util.rs  validate.rs
music/src/apply/: add.rs  error.rs  min_file.rs  new.rs  sync.rs  update.rs
music/src/cli/: file_path.rs  file_paths.rs  music_root.rs  parser.rs  shared_args.rs
music/src/cli_exec_handler/: add.rs  error.rs  hash_inputs.rs  min.rs  sync.rs  update.rs  util.rs
music/src/fetcher/: error.rs  response.rs  youtube.rs
music/src/min_output/: clips.rs  minified_json.rs  videos.rs
music/src/model/: clip.rs  tag.rs  uuid.rs  video.rs  video_id.rs
music/src/model/clip/: anonymous.rs  unverified.rs  verified.rs
music/src/model/video/: anonymous.rs  verified.rs
music/src/music_file/: error.rs  file.rs  fs_util.rs  library.rs  repository.rs  videos.rs
music/src/operations/: find_duplicate_video_ids.rs  merge_input_files.rs
music/src/util/: dir_path.rs
music/tests/: cli_e2e.rs
music_data/: Cargo.toml  README.md  rust-toolchain.toml
music_data/data/: README.md  artists.json  artists_data.json  search_index.md
music_data/data/input/: 2025-08-10_06-37-45.json  2025-08-10_07-00-00.json  2025-08-10_07-27-09.json  2025-08-10_07-33-12.json  2025-08-10_08-40-07.json  2025-08-10_12-25-55.json  2025-08-14_12-47-40.json  x_note.txt
music_data/data/music/2021/: 02.json
music_data/data/music/2023/: 12.json
music_data/data/music/2024/: 01.json  05.json  06.json  07.json  09.json
music_data/data/music/2025/: 01.json  02.json  04.json  05.json  06.json  08.json
music_data/src/: apply.rs  artist.rs  cli.rs  cli_exec_handler.rs  dev.rs  fetcher.rs  fs.rs  lib.rs  main.rs  model.rs  music_file.rs  music_files.rs  util.rs  validate.rs
music_data/src/apply/: common.rs  min_file.rs  new.rs  sync.rs  update.rs
music_data/src/artist/: generate.rs  model.rs  output.rs
music_data/src/artist/model/: artist_data.rs  artist_id.rs  color.rs  string_non_empty.rs
music_data/src/artist/output/: artist_search_index.rs  artists.rs  channels.rs  snippet.rs
music_data/src/cli/: file_paths.rs  glob_pattern.rs  min.rs  min_clips.rs  music_root.rs  parser.rs  tracing_level.rs  video_ids.rs
music_data/src/fetcher/: error.rs  response.rs  video_detail_fetch.rs  youtube.rs  youtube_api_key.rs
music_data/src/fs/: flat_clips.rs
music_data/src/model/: artist.rs  channel_id.rs  clip.rs  color.rs  duration.rs  privacy_status.rs  tag.rs  uploader_name.rs  uuid.rs  uuid_stale.rs  video.rs  video_id.rs  video_published_at.rs  volume_percent.rs
music_data/src/model/clip/: anonymous.rs  flat.rs  unverified.rs  verified.rs
music_data/src/model/video/: anonymous.rs  brief.rs  detail.rs  record.rs  verified.rs
music_data/src/music_file/: error.rs  file.rs  fs.rs  fs_util.rs  library.rs  model.rs  root.rs  util.rs  validate.rs  videos.rs
music_data/src/util/: datetime_serde.rs  dir_path.rs  file_path.rs  fs.rs  tracing.rs
music_data/tests/: youtube_integration.rs
rust_music_data/: Cargo.toml
rust_music_data/data/: README.md  artists.json  bac.json
rust_music_data/src/: fetcher.rs  lib.rs  main.rs  model.rs
rust_music_data/src/artist/model/: artist_data.rs  artist_id.rs  string_non_empty.rs
rust_music_data/src/artist/output/: artist_search_index.rs
rust_music_data/src/fetcher/: draft.rs  fetch_result.rs  response.rs  state.rs  video_detail_fetch.rs  x_.rs  youtube.rs  youtube_api_key.rs  youtube_api_response.rs
rust_music_data/src/fs/: flat_clips.rs
rust_music_data/src/model/: artist.rs  channel_id.rs  channel_name.rs  clip.rs  duration.rs  privacy_status.rs  tag.rs  uuid.rs  video.rs  video_id.rs  video_published_at.rs  youtube_api_key.rs
rust_music_data/src/model/clip/: anonymous.rs  verified.rs  (+1 more)
rust_music_data/src/util/: datetime_serde.rs
search/engine-wasm/: Cargo.toml  README.md  opinion.md  usage.md
search/engine-wasm/src/: api.rs  cursor.rs  error.rs  lib.rs
search/index-builder/: Cargo.toml
search/index-builder/src/: build.rs  cli.rs  cli_exec_handler.rs  lib.rs  main.rs
search/index-builder/tests/: cli_e2e.rs
(+234 files in other folders)
