[package]
name = "cmn_rs"
version = "0.1.0"
edition = "2024"


[dependencies]
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }

[features]
test-helpers = []

[dev-dependencies]
serde_json = { workspace = true }
