[package]
name = "metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
artistctl = { path = "./artist" }
clap = { workspace = true }
cmn_rs = { path = "../cmn_rs" }
tagctl = { path = "./tag" }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json = { workspace = true }
tempfile = "3.26.0"
