[package]
name = "musictl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
artistctl = { path = "../metadata/artist" }
chrono = "0.4.44"
clap = { workspace = true }
cmn_rs = { path = "../cmn_rs" }
dialoguer = "0.12.0"
once_cell = { workspace = true }
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.5.0"

[dev-dependencies]
artistctl = { path = "../metadata/artist", features = ["test-helpers"] }
