[package]
name = "musictl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "env"] }
glob = "0.3.2"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
walkdir = "2.5.0"

[profile.test]
debug = 2

[profile.dev]
debug = 2

[profile.release]
debug = 1

[profile.bench]
debug = 1
