[package]
name = "artistctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
json5 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
cmn_rs = { path = "../../cmn_rs" }

[dev-dependencies]
cmn_rs = { path = "../../cmn_rs", features = ["test-helpers"] }

[features]
test-helpers = ["cmn_rs/test-helpers"]
