[workspace]
[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
engine = { path = "../engine" }
index-core = { path = "../index-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = "0.2.120"
