[package]
name = "index-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
artistctl = { path = "../../metadata/artist" }
index-core = { path = "../index-core" }
musictl = { path = "../../music" }
tagctl = { path = "../../metadata/tag" }

anyhow = { workspace = true }
clap = { workspace = true }
cmn_rs = { path = "../../cmn_rs" }
tracing = { workspace = true }

[dev-dependencies]
artistctl = { path = "../../metadata/artist", features = ["test-helpers"] }
assert_cmd = "2.1.1"
cmn_rs = { path = "../../cmn_rs" }
musictl = { path = "../../music", features = ["test-helpers"] }
tagctl = { path = "../../metadata/tag", features = ["test-helpers"] }
tempfile = "3.26.0"

[features]
test-helpers = ["artistctl/test-helpers", "musictl/test-helpers", "tagctl/test-helpers"]
